--- a/modules/administration-guide/partials/proc_installing-che-on-microsoft-azure-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-che-on-microsoft-azure-kubernetes-service.adoc
@@ -7,7 +7,7 @@
 
 .Procedure
 
-. Prepare a CheCluster patch yaml file:
+. Prepare a CheCluster patch YAML file:
 +
 [source,shell,subs="attributes+"]
 ----
