--- a/modules/administration-guide/partials/proc_preparing-microsoft-azure-for-installing-che.adoc
+++ b/modules/administration-guide/partials/proc_preparing-microsoft-azure-for-installing-che.adoc
@@ -70,7 +70,7 @@ az aks get-credentials \
   --admin
 ----
 
-. Set `kubelogin` to use the Azure CLI:
+. Set `kubelogin` to use the Microsoft Azure CLI:
 +
 [source,shell]
 ----
