--- a/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
+++ b/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
@@ -1,5 +1,5 @@
 :_content-type: PROCEDURE
-:description: Installing {prod-short} in the Cloud
+:description: Installing {prod-short} in the cloud
 :keywords: overview, running-che-in-the-cloud, installing-che-in-the-cloud
 :navtitle: Installing {prod-short} in the Cloud
 
