--- a/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
+++ b/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
@@ -4,7 +4,7 @@
 :navtitle: Installing {prod-short} in the cloud
 
 [id="installing-{prod-id-short}-locally"]
-= Installing {prod-short} in the Cloud
+= Installing {prod-short} in the cloud
 
 This section contains instructions for deploying and running {prod} in the Cloud.
 
