--- a/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
+++ b/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
@@ -6,7 +6,7 @@
 [id="installing-{prod-id-short}-locally"]
 = Installing {prod-short} in the cloud
 
-This section contains instructions for deploying and running {prod} in the Cloud.
+Deploy and run {prod} in the cloud.
 
 .Prerequisites
 
