--- a/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
+++ b/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
@@ -12,7 +12,7 @@ Deploy and run {prod} in the cloud.
 
 * A {platforms-name} cluster to deploy {prod-short} on.
 
-* `{prod-cli}` the command line tool for {prod}. See: xref:installing-the-chectl-management-tool.adoc[].
+* `{prod-cli}`: The command line tool for {prod}. See: xref:installing-the-chectl-management-tool.adoc[].
 
 == Deploying {prod-short} in the Cloud
 
