--- a/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
+++ b/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
@@ -14,7 +14,7 @@ Deploy and run {prod} in the cloud.
 
 * `{prod-cli}`: The command line tool for {prod}. See: xref:installing-the-chectl-management-tool.adoc[].
 
-== Deploying {prod-short} in the Cloud
+== Deploying {prod-short} in the cloud
 
 Choose one of the following procedures to start the {prod-short} Server in the Cloud using the `{prod-cli}` tool.
 
