--- a/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
+++ b/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
@@ -16,6 +16,6 @@ Deploy and run {prod} in the cloud.
 
 == Deploying {prod-short} in the cloud
 
-Choose one of the following procedures to start the {prod-short} Server in the Cloud using the `{prod-cli}` tool.
+Follow the instructions below to start the {prod-short} Server in the cloud using the `{prod-cli}` tool.
 
 * xref:installing-che-on-microsoft-azure.adoc[]
