--- a/modules/administration-guide/pages/installing-che-on-microsoft-azure.adoc
+++ b/modules/administration-guide/pages/installing-che-on-microsoft-azure.adoc
@@ -6,7 +6,7 @@
 [id="installing-{prod-id-short}-on-microsoft-azure"]
 = Installing {prod-short} on Microsoft Azure
 
-Microsoft Azure is a cloud computing service created by Microsoft for building, testing, deploying, and managing applications and services through Microsoft-managed data centers.
+Microsoft Azure is a cloud computing service for building, testing, deploying, and managing applications and services through Microsoft-managed data centers.
 
 This section provides information about installing, enabling, and basic use of {prod-short} on Microsoft Azure.
 
