--- a/modules/administration-guide/pages/installing-che-on-microsoft-azure.adoc
+++ b/modules/administration-guide/pages/installing-che-on-microsoft-azure.adoc
@@ -8,7 +8,7 @@
 
 Microsoft Azure is a cloud computing service for building, testing, deploying, and managing applications and services through Microsoft-managed data centers.
 
-This section provides information about installing, enabling, and basic use of {prod-short} on Microsoft Azure.
+Follow the instructions below to install and enable {prod-short} on Microsoft Azure.
 
 .Prerequisites
 
