--- a/modules/administration-guide/pages/installing-che-on-microsoft-azure.adoc
+++ b/modules/administration-guide/pages/installing-che-on-microsoft-azure.adoc
@@ -1,5 +1,5 @@
 :_content-type: ASSEMBLY
-:description: Installing {prod-short} on Microsoft Azure
+:description: Installing and setting up {prod-short} on Microsoft Azure
 :keywords: overview, installing-che-on-microsoft-azure
 :navtitle: Installing {prod-short} on Microsoft Azure
 
