--- a/modules/administration-guide/pages/installing-che-on-microsoft-azure.adoc
+++ b/modules/administration-guide/pages/installing-che-on-microsoft-azure.adoc
@@ -4,7 +4,7 @@
 :navtitle: Installing and setting up {prod-short} on Microsoft Azure
 
 [id="installing-{prod-id-short}-on-microsoft-azure"]
-= Installing {prod-short} on Microsoft Azure
+= Installing and setting up {prod-short} on Microsoft Azure
 
 Microsoft Azure is a cloud computing service for building, testing, deploying, and managing applications and services through Microsoft-managed data centers.
 
