--- a/modules/administration-guide/partials/proc_configuring-dns-on-microsoft-azure.adoc
+++ b/modules/administration-guide/partials/proc_configuring-dns-on-microsoft-azure.adoc
@@ -5,6 +5,12 @@
 [id="configuring-DNS-on-microsoft-azure"]
 = Configuring DNS on Microsoft Azure
 
+Configure DNS on Microsoft Azure. Before you start, make sure you have a registered domain.
+
+.Prerequisites
+
+* A registered domain.
+
 .Procedure
 
 . Define the domain name. You will need to register a domain unless you already have one.
