--- a/modules/administration-guide/partials/proc_configuring-dns-on-microsoft-azure.adoc
+++ b/modules/administration-guide/partials/proc_configuring-dns-on-microsoft-azure.adoc
@@ -13,7 +13,7 @@ Configure DNS on Microsoft Azure. Before you start, make sure you have a registe
 
 .Procedure
 
-. Define the domain name. You will need to register a domain unless you already have one.
+. Define the domain name.
 +
 [source,shell]
 ----
