--- a/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-microsoft-azure.adoc
+++ b/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-microsoft-azure.adoc
@@ -5,6 +5,8 @@
 [id="creating-lets-encrypt-certificate-for-{prod-id-short}-on-microsoft-azure"]
 = Creating Let's encrypt certificate for {prod-id-short} on Microsoft Azure
 
+Follow these instructions to create a Let's Encrypt certificate for {prod-short} on Microsoft Azure.
+
 .Procedure
 
 . Create a service principal:
