--- a/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-microsoft-azure.adoc
+++ b/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-microsoft-azure.adoc
@@ -3,7 +3,7 @@
 // installing-{prod-id-short}-on-microsoft-azure
 
 [id="creating-lets-encrypt-certificate-for-{prod-id-short}-on-microsoft-azure"]
-= Creating Let's encrypt certificate for {prod-id-short} on Microsoft Azure
+= Creating Let's Encrypt certificate for {prod-id-short} on Microsoft Azure
 
 Follow these instructions to create a Let's Encrypt certificate for {prod-short} on Microsoft Azure.
 
