--- a/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-microsoft-azure.adoc
+++ b/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-microsoft-azure.adoc
@@ -34,7 +34,7 @@ az role assignment create \
 {orch-cli} create namespace {prod-namespace}
 ----
 
-. Creating a Service Account Secret:
+. Create a Service Account Secret:
 +
 [source,shell,subs="attributes+"]
 ----
