--- a/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-microsoft-azure.adoc
+++ b/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-microsoft-azure.adoc
@@ -43,7 +43,7 @@ az role assignment create \
   --namespace {prod-namespace}
 ----
 
-. Create the Issuer. Replace `MY_EMAIL_ADDRESS` with a valid address:
+. Create the Issuer and replace `MY_EMAIL_ADDRESS` with a valid address:
 +
 [source,shell,subs="+attributes,+quotes"]
 ----
