--- a/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-microsoft-azure.adoc
+++ b/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-microsoft-azure.adoc
@@ -100,8 +100,12 @@ spec:
     - data encipherment
 EOF
 ----
-IMPORTANT: If you use a registrar such as GoDaddy, you will need to duplicate DNS records in your registrar of
-type `TXT` and name `_acme-challenge`.
+[IMPORTANT]
+====
+If you use a registrar such as GoDaddy, you need to duplicate the following DNS records in your registrar:
+* type: `TXT`
+* name: `_acme-challenge`.
+====
 +
 .Additional resources
 
