--- a/modules/administration-guide/partials/proc_configuring-dns-on-microsoft-azure.adoc
+++ b/modules/administration-guide/partials/proc_configuring-dns-on-microsoft-azure.adoc
@@ -42,8 +42,10 @@ az network dns record-set a add-record \
 [IMPORTANT]
 ====
 If you use a registrar such as GoDaddy, you will need to add
-two DNS records in your registrar of type `A`, names `@` and `*`, and point them to the
-IP address of the ingress controller.
+the following two DNS records in your registrar and point them to the
+IP address of the ingress controller:
+* type: `A`
+* names: `@` and `*`
 ====
 +
 .Additional resources
