--- a/modules/administration-guide/partials/proc_installing-cert-manager-on-microsoft-azure-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-cert-manager-on-microsoft-azure-kubernetes-service.adoc
@@ -5,6 +5,8 @@
 [id="installing-cert-manager-on-microsoft-azure-kubernetes-service"]
 = Installing cert-manager on Microsoft Azure Kubernetes Service
 
+Learn how to install cert-manager on Microsoft Azure Kubernetes Service.
+
 .Procedure
 
 . To install the cert-manager:
