--- a/modules/administration-guide/partials/proc_installing-che-on-microsoft-azure-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-che-on-microsoft-azure-kubernetes-service.adoc
@@ -5,6 +5,8 @@
 [id="installing-che-on-microsoft-azure-kubernetes-service"]
 = Installing {prod-short} on Microsoft Azure Kubernetes Service
 
+Install {prod-short} on Microsoft Azure Kubernetes Service.
+
 .Procedure
 
 . Prepare a CheCluster patch YAML file:
