--- a/modules/administration-guide/partials/proc_installing-nginx-ingress-controller-on-microsoft-azure-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-nginx-ingress-controller-on-microsoft-azure-kubernetes-service.adoc
@@ -5,6 +5,8 @@
 [id="installing-nginx-ingress-controller-on-microsoft-azure-kubernetes-service"]
 = Installing NGINX Ingress Controller on Microsoft Azure Kubernetes Service
 
+Use the following instructions to install the NGINX Ingress Controller on Microsoft Azure Kubernetes Service.
+
 .Procedure
 
 . Install NGINX Ingress Controller:
