--- a/modules/administration-guide/partials/proc_preparing-microsoft-azure-for-installing-che.adoc
+++ b/modules/administration-guide/partials/proc_preparing-microsoft-azure-for-installing-che.adoc
@@ -5,6 +5,8 @@
 [id="preparing-microsoft-azure-for-installing-che"]
 = Preparing Microsoft Azure for installing {prod-short}
 
+Prepare Microsoft Azure for {prod-short} installation.
+
 .Procedure
 
 . Log in to Microsoft Azure:
