--- a/modules/administration-guide/partials/proc_preparing-microsoft-azure-for-installing-che.adoc
+++ b/modules/administration-guide/partials/proc_preparing-microsoft-azure-for-installing-che.adoc
@@ -3,7 +3,7 @@
 // installing-{prod-id-short}-on-microsoft-azure
 
 [id="preparing-microsoft-azure-for-installing-che"]
-= Preparing Microsoft Azure for installing {prod-short}
+= Preparing Microsoft Azure for {prod-short} installation
 
 Prepare Microsoft Azure for {prod-short} installation.
 
