--- a/modules/administration-guide/partials/proc_preparing-microsoft-azure-for-installing-che.adoc
+++ b/modules/administration-guide/partials/proc_preparing-microsoft-azure-for-installing-che.adoc
@@ -86,7 +86,9 @@ kubelogin convert-kubeconfig -l azurecli
 {orch-cli} get pods --all-namespaces
 ----
 +
-All the Pods in the running state are displayed.
+. Verification
+
+All pods in the running state are displayed.
 
 .Additional resources
 
