--- a/modules/administration-guide/partials/proc_registering-application-on-microsoft-azure.adoc
+++ b/modules/administration-guide/partials/proc_registering-application-on-microsoft-azure.adoc
@@ -5,6 +5,8 @@
 [id="registering-the-application-on-microsoft-azure-ad-portal"]
 = Registering a client application in Microsoft Entra ID
 
+Learn how to register a client application in Microsoft Entra ID
+
 .Procedure
 
 . Create the application:
