--- a/modules/administration-guide/partials/proc_installing-cert-manager-on-microsoft-azure-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-cert-manager-on-microsoft-azure-kubernetes-service.adoc
@@ -3,7 +3,7 @@
 // installing-{prod-id-short}-on-microsoft-azure
 
 [id="installing-cert-manager-on-microsoft-azure-kubernetes-service"]
-= Installing cert-manager on Microsoft Azure Kubernetes Service
+= Installing cert-manager on Microsoft Azure {kubernetes} Service
 
 Learn how to install cert-manager on Microsoft Azure Kubernetes Service.
 
