--- a/modules/administration-guide/partials/proc_installing-che-on-microsoft-azure-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-che-on-microsoft-azure-kubernetes-service.adoc
@@ -3,7 +3,7 @@
 // installing-{prod-id-short}-on-microsoft-azure
 
 [id="installing-che-on-microsoft-azure-kubernetes-service"]
-= Installing {prod-short} on Microsoft Azure Kubernetes Service
+= Installing {prod-short} on Microsoft Azure {kubernetes} Service
 
 Install {prod-short} on Microsoft Azure Kubernetes Service.
 
