--- a/modules/administration-guide/partials/proc_installing-che-on-microsoft-azure-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-che-on-microsoft-azure-kubernetes-service.adoc
@@ -5,7 +5,7 @@
 [id="installing-che-on-microsoft-azure-kubernetes-service"]
 = Installing {prod-short} on Microsoft Azure {kubernetes} Service
 
-Install {prod-short} on Microsoft Azure Kubernetes Service.
+Install {prod-short} on Microsoft Azure {kubernetes} Service.
 
 .Procedure
 
