--- a/modules/administration-guide/partials/proc_installing-nginx-ingress-controller-on-microsoft-azure-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-nginx-ingress-controller-on-microsoft-azure-kubernetes-service.adoc
@@ -3,7 +3,7 @@
 // installing-{prod-id-short}-on-microsoft-azure
 
 [id="installing-nginx-ingress-controller-on-microsoft-azure-kubernetes-service"]
-= Installing NGINX Ingress Controller on Microsoft Azure Kubernetes Service
+= Installing NGINX Ingress Controller on Microsoft Azure {kubernetes} Service
 
 Use the following instructions to install the NGINX Ingress Controller on Microsoft Azure Kubernetes Service.
 
