--- a/modules/administration-guide/partials/proc_installing-cert-manager-on-microsoft-azure-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_installing-cert-manager-on-microsoft-azure-kubernetes-service.adoc
@@ -5,7 +5,7 @@
 [id="installing-cert-manager-on-microsoft-azure-kubernetes-service"]
 = Installing cert-manager on Microsoft Azure {kubernetes} Service
 
-Learn how to install cert-manager on Microsoft Azure Kubernetes Service.
+Learn how to install cert-manager on Microsoft Azure {kubernetes} Service.
 
 .Procedure
 
