fix: docs improvements
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/examples/snip_che-installing-che.adoc
+++ b/modules/administration-guide/examples/snip_che-installing-che.adoc
@@ -4,7 +4,7 @@ The installation method depends on the target platform and the environment restr
 
 .Using {prod-short} as a service
 
-* link:https://www.eclipse.org/che/docs/che-7/hosted-che/hosted-che/[{prod-short} hosted by RedHat]
+* link:https://www.eclipse.org/che/docs/stable/hosted-che/hosted-che/[{prod-short} hosted by RedHat]
 
 .Installing {prod-short} in the cloud
 
@@ -13,7 +13,7 @@ You can deploy only one instance of {prod-short} per cluster.
 * xref:installing-che-on-openshift-using-cli.adoc[]
 * xref:installing-che-on-openshift-using-the-web-console.adoc[]
 * xref:installing-che-in-a-restricted-environment.adoc[]
-
+* xref:installing-che-on-microsoft-azure.adoc[]
 
 .Installing {prod-short} on a local single-node cluster
 
@@ -21,4 +21,4 @@ Single-node clusters are suited only for testing or development. Do *not* use su
 
 * xref:installing-che-on-red-hat-openshift-local.adoc[]
 * xref:installing-che-on-minikube.adoc[]
-
+* xref:installing-che-on-minikube-keycloak-oidc.adoc[]
