--- a/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
+++ b/modules/administration-guide/pages/installing-che-in-the-cloud.adoc
@@ -18,4 +18,7 @@ Deploy and run {prod} in the cloud.
 
 Follow the instructions below to start the {prod-short} Server in the cloud using the `{prod-cli}` tool.
 
+* xref:installing-che-on-openshift-using-cli.adoc[]
+* xref:installing-che-on-openshift-using-the-web-console.adoc[]
+* xref:installing-che-in-a-restricted-environment.adoc[]
 * xref:installing-che-on-microsoft-azure.adoc[]
