--- a/modules/administration-guide/pages/installing-che-on-microsoft-azure.adoc
+++ b/modules/administration-guide/pages/installing-che-on-microsoft-azure.adoc
@@ -1,10 +1,10 @@
 :_content-type: ASSEMBLY
-:description: Installing and setting up {prod-short} on Microsoft Azure
+:description: Installing {prod-short} on Microsoft Azure
 :keywords: overview, installing-che-on-microsoft-azure
 :navtitle: Installing and setting up {prod-short} on Microsoft Azure
 
 [id="installing-{prod-id-short}-on-microsoft-azure"]
-= Installing and setting up {prod-short} on Microsoft Azure
+= Installing {prod-short} on Microsoft Azure
 
 Microsoft Azure is a cloud computing service for building, testing, deploying, and managing applications and services through Microsoft-managed data centers.
 
