--- a/modules/administration-guide/pages/finding-the-fully-qualified-domain-name-fqdn.adoc
+++ b/modules/administration-guide/pages/finding-the-fully-qualified-domain-name-fqdn.adoc
@@ -9,20 +9,18 @@
 
 You can get the fully qualified domain name (FQDN) of your organization's instance of {prod-short} on the command line or in the OpenShift web console.
 
-TIP: You can find the FQDN for your organization's {prod-short} instance in the *Administrator* view of the OpenShift web console as follows. Go to *Operators* -> *OperatorHub* -> *Installed Operators* -> *{prod} instance Specification* -> *{prod-checluster}* -> *{prod} URL*.
+TIP: You can find the FQDN for your organization's {prod-short} instance in the *Administrator* view of the OpenShift web console as follows. Go to *Operators* -> *Installed Operators* -> *{prod} instance Specification* -> *{prod-checluster}* -> *{prod} URL*.
 
 
 .Prerequisites
 
 * An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
-* `{prod-cli}`. See xref:installing-the-chectl-management-tool.adoc[].
 
 .Procedure
 
 . Run the following command:
 +
-[subs="+attributes,+quotes"]
+[source,bash,subs="+attributes,+quotes"]
 ----
-$ {prod-cli} server:status
+{orch-cli} get checluster {prod-checluster} -n {prod-namespace} -o jsonpath='{.status.cheURL}'
 ----
-. Copy the *{prod} URL* without the trailing `/dashboard/`.
