--- a/modules/administration-guide/pages/installing-che-locally.adoc
+++ b/modules/administration-guide/pages/installing-che-locally.adoc
@@ -15,14 +15,10 @@ This section contains instructions for deploying and running {prod} locally, on 
 
 * `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
-.Deploying {prod-short} on Minikube in 3 minutes using {prod-cli}
-++++
-<script id="asciicast-216201" src="https://asciinema.org/a/216201.js" async></script>
-++++
-
 == Deploying {prod-short} locally using {prod-cli}
 
-Choose one of the following procedures to start the {prod-short} Server using the `{prod-cli}` tool.
+Choose one of the following procedures to deploy the {prod-short} using the `{prod-cli}` tool.
 
 * xref:installing-che-on-red-hat-openshift-local.adoc[]
 * xref:installing-che-on-minikube.adoc[]
+* xref:installing-che-on-minikube-keycloak-oidc.adoc[]
