--- a/modules/administration-guide/pages/installing-che-on-microsoft-azure.adoc
+++ b/modules/administration-guide/pages/installing-che-on-microsoft-azure.adoc
@@ -1,7 +1,7 @@
 :_content-type: ASSEMBLY
 :description: Installing {prod-short} on Microsoft Azure
 :keywords: overview, installing-che-on-microsoft-azure
-:navtitle: Installing and setting up {prod-short} on Microsoft Azure
+:navtitle: Installing {prod-short} on Microsoft Azure
 
 [id="installing-{prod-id-short}-on-microsoft-azure"]
 = Installing {prod-short} on Microsoft Azure
