--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -10,7 +10,7 @@
 This procedure walks through the process of using the {prod-short}
 to replicate `ConfigMaps`, `Secrets` and `PersistentVolumeClaim` from `{prod-namespace}` namespace to numerous
 user-specific namespaces. The operator automates the synchronization of important configuration
-data such as passwords, ssh-keys, certificates etc to users' namespaces.
+data such as passwords, SSH keys, and certificates to user namespaces.
 
 If a {kubernetes} resource is changed in an {prod-namespace} namespace,
 the operator will immediately replicate the changes across all users namespaces.
