--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -7,7 +7,7 @@
 [id="configuring-a-user-namespace"]
 = Configuring a user namespace
 
-This procedure walks through the process of using the {prod-short}
+This procedure walks you through the process of using {prod-short}
 to replicate `ConfigMaps`, `Secrets` and `PersistentVolumeClaim` from `{prod-namespace}` namespace to numerous
 user-specific namespaces. The operator automates the synchronization of important configuration
 data such as passwords, SSH keys, and certificates to user namespaces.
