--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -12,7 +12,7 @@ to replicate `ConfigMaps`, `Secrets` and `PersistentVolumeClaim` from `{prod-nam
 user-specific namespaces. The operator automates the synchronization of important configuration
 data such as passwords, SSH keys, and certificates to user namespaces.
 
-If a {kubernetes} resource is changed in an {prod-namespace} namespace,
+If you make changes to a {kubernetes} resource in an {prod-namespace} namespace,
 the operator will immediately replicate the changes across all users namespaces.
 In reverse, if a {kubernetes} resource is modified in a user namespace,
 the operator will immediately revert the changes.
