--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -17,8 +17,8 @@ the operator will immediately replicate the changes across all users namespaces.
 In reverse, if a {kubernetes} resource is modified in a user namespace,
 the operator will immediately revert the changes.
 
-The special logic is used for 'PersistentVolumeClaim' resources. If a 'PersistentVolumeClaim'
-is updated in {prod-namespace} or user namespaces, it will not be replicated or reverted due
+Special logic is used for 'PersistentVolumeClaim' resources. If you update 'PersistentVolumeClaim'
+in {prod-namespace} or user namespaces, it will not be replicated or reverted due
 to its readonly specification. To modify the 'PersistentVolumeClaim' specification, delete it and create a new one
 in {prod-namespace} namespace.
 
