--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -19,7 +19,7 @@ the operator will immediately revert the changes.
 
 Special logic is used for 'PersistentVolumeClaim' resources. If you update 'PersistentVolumeClaim'
 in {prod-namespace} or user namespaces, it will not be replicated or reverted due
-to its readonly specification. To modify the 'PersistentVolumeClaim' specification, delete it and create a new one
+to its read-only specification. To modify the 'PersistentVolumeClaim' specification, delete it and create a new one
 in {prod-namespace} namespace.
 
 .Procedure
