--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -23,7 +23,7 @@ to its read-only specification. To modify the 'PersistentVolumeClaim' specificat
 in {prod-namespace} namespace.
 
 .Procedure
-* Create the `ConfigMap` below to replicate it to every user namespace.
+. Create the `ConfigMap` below to replicate it to every user namespace.
 +
 The following labels will be added to a replicated ConfigMap automatically:
 `"controller.devfile.io/watch-configmap":"true"` and `"controller.devfile.io/mount-to-devworkspace":"true"`.
@@ -46,7 +46,7 @@ data:
 ...
 ----
 
-* Create the `Secret` below to replicate it to every user namespace.
+. Create the `Secret` below to replicate it to every user namespace.
 +
 The following labels will be added to a replicated Secret automatically:
 `"controller.devfile.io/watch-secret":"true"` and `"controller.devfile.io/mount-to-devworkspace":"true"`.
@@ -69,7 +69,7 @@ stringData:
 ...
 ----
 
-* Create the `PersistentVolumeClaim` below to replicate it to every user namespace.
+. Create the `PersistentVolumeClaim` below to replicate it to every user namespace.
 +
 To enhance the configurability, you can customize the `PersistentVolumeClaim` by adding additional labels and annotations.
 See the link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additional-configuration.adoc#automatically-mounting-volumes-configmaps-and-secrets[Automatically mounting volumes, configmaps, and secrets]
