--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -162,7 +162,7 @@ metadata:
     app.kubernetes.io/component: workspaces-config
     controller.devfile.io/mount-to-devworkspace: 'true'
   annotations:
-    controller.devfile.io/mount-path: __</example/directory>__ <1>
+    controller.devfile.io/mount-path: /home/user/data
     controller.devfile.io/read-only: 'true'
 spec:
   accessModes:
