--- a/modules/administration-guide/pages/configuring-server-components.adoc
+++ b/modules/administration-guide/pages/configuring-server-components.adoc
@@ -8,3 +8,5 @@
 = Configuring server components
 
 * xref:mounting-a-secret-as-a-file-or-an-environment-variable-into-a-container.adoc[]
+* xref:advanced-configuration-options-for-the-che-server-component.adoc[]
+* xref:configuring-number-of-replicas.adoc[]
