--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -13,9 +13,9 @@ user-specific namespaces. The {prod-short} automates the synchronization of impo
 data such as passwords, SSH keys, and certificates to user namespaces.
 
 If you make changes to a {kubernetes} resource in an {prod-namespace} namespace,
-the operator will immediately replicate the changes across all users namespaces.
+{prod-short} will immediately replicate the changes across all users namespaces.
 In reverse, if a {kubernetes} resource is modified in a user namespace,
-the operator will immediately revert the changes.
+{prod-short} will immediately revert the changes.
 
 .Procedure
 
