Vale errors fix

--- a/code_review_checklist.adoc
+++ b/code_review_checklist.adoc
@@ -27,9 +27,9 @@ The author and the reviewers validate the content of a pull request with this ad
 * [ ] Builds on https://workspaces.openshift.com[Eclipse Che hosted by Red Hat].
 * [ ] *`Validate language on files added or modified`* step reports no vale warnings.
 
-## In depth language review checklist
+## In-depth language review checklist
 
-The technical writer reviewers validate the language with this additional in depth checklist. We do recognize the subjectivity of some of these objectives.
+The technical writer reviewers validate the language with this additional in-depth checklist. We do recognize the subjectivity of some of these objectives.
 
 - [ ] Content is appropriate for the intended audience.
 - [ ] Downstream friendly: correct use of attributes, `ifdef` statements, examples.
