--- a/modules/administration-guide/pages/user-workspaces.adoc
+++ b/modules/administration-guide/pages/user-workspaces.adoc
@@ -31,7 +31,7 @@ A workspace is one {orch-name} Deployment containing the workspace containers an
 * Secrets
 * Persistent Volumes (PV)
 
-A {prod-short} workspace contains the source code of the projects, persisted in a {platforms-name} Persistent Volume (PV). Microservices have read-write access to this shared directory.
+A {prod-short} workspace contains the source code of the projects, persisted in a {platforms-name} Persistent Volume (PV). Microservices have read/write access to this shared directory.
 
 Use the devfile v2 format to specify the tools and runtime applications of a {prod-short} workspace.
 
