--- a/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
@@ -7,6 +7,8 @@
 [id="using-credentials-and-configurations-in-workspaces"]
 = Using credentials and configurations in workspaces
 
+pass:[<!-- vale RedHat.CaseSensitiveTerms = NO -->]
+
 You can use your credentials and configurations in your workspaces.
 
 To do so, mount your credentials and configurations to the `{devworkspace}` containers in the {orch-name} cluster of your organization's {prod-short} instance:
@@ -18,6 +20,8 @@ To do so, mount your credentials and configurations to the `{devworkspace}` cont
 If you need to allow the `{devworkspace}` Pods in the cluster to access container registries that require authentication, create an xref:creating-image-pull-secrets.adoc[image pull Secret] for the `{devworkspace}` Pods.
 
 The mounting process uses the standard {kubernetes} mounting mechanism and requires applying additional labels and annotations to your existing resources. Resources are mounted when starting a new workspace or restarting an existing one.
+
+pass:[<!-- vale RedHat.CaseSensitiveTerms = YES -->]
 
 You can create permanent mount points for various components:
 
