--- a/modules/end-user-guide/partials/proc_requesting-persistent-storage-in-a-pvc.adoc
+++ b/modules/end-user-guide/partials/proc_requesting-persistent-storage-in-a-pvc.adoc
@@ -41,7 +41,7 @@ Defaults to `/tmp/__<PVC_name>__`.
 | `controller.devfile.io/read-only:`
 | Set to `'true'` or `'false'` to specify whether the PVC is to be mounted as read-only.
 
-Defaults to `'false'`, resulting in the PVC mounted as read-write.
+Defaults to `'false'`, resulting in the PVC mounted as read/write.
 |===
 
 .Mounting a read-only PVC
