--- a/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
+++ b/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
@@ -7,6 +7,8 @@
 [id="authenticating-to-a-git-server-from-a-workspace"]
 = Authenticating to a Git server from a workspace
 
+pass:[<!-- vale RedHat.CaseSensitiveTerms = NO -->]
+
 In a workspace, you can run Git commands that require user authentication like cloning a remote private Git repository or pushing to a remote public or private Git repository.
 
 User authentication to a Git server from a workspace is configured by the administrator or, in some cases, by the individual user:
@@ -14,6 +16,8 @@ User authentication to a Git server from a workspace is configured by the admini
 * Your administrator sets up an xref:administration-guide:configuring-oauth-for-git-providers.adoc[OAuth application on GitHub, GitLab, Bitbucket, or Microsoft Azure Repos] for your organization's {prod} instance.
 
 * As a workaround, some users create and apply their own {kubernetes} Secrets for their personal xref:using-a-git-provider-access-token.adoc[Git-provider access tokens] or link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additional-configuration.adoc#configuring-devworkspaces-to-use-ssh-keys-for-git-operations[configure SSH keys for Git operations].
+
+pass:[<!-- vale RedHat.CaseSensitiveTerms = YES -->]
 
 .Additional resources
 * xref:administration-guide:configuring-oauth-for-git-providers.adoc[Administration Guide: Configuring OAuth for Git providers]
