--- a/modules/end-user-guide/pages/requesting-persistent-storage-for-workspaces.adoc
+++ b/modules/end-user-guide/pages/requesting-persistent-storage-for-workspaces.adoc
@@ -7,11 +7,15 @@
 [id="requesting-persistent-storage-for-workspaces"]
 = Requesting persistent storage for workspaces
 
+pass:[<!-- vale RedHat.CaseSensitiveTerms = NO -->]
+
 {prod-short} workspaces and workspace data are ephemeral and are lost when the workspace stops.
 
 To preserve the workspace state in persistent storage while the workspace is stopped, request a {kubernetes} PersistentVolume (PV) for the `{devworkspace}` containers in the {orch-name} cluster of your organization's {prod-short} instance.
 
 You can request a PV by using the devfile or a {kubernetes} PersistentVolumeClaim (PVC).
+
+pass:[<!-- vale RedHat.CaseSensitiveTerms = YES -->]
 
 An example of a PV is the `/projects/` directory of a workspace, which is mounted by default for non-ephemeral workspaces.
 
